--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
-    "ffmpeg-static": "^5.2.0",
-    "fluent-ffmpeg": "^2.1.2",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "youtube-dl-exec": "^2.4.7"
   },
   "devDependencies": {
-    "@types/node": "^20.5.4",
-    "@types/fluent-ffmpeg": "^2.1.21"
+    "@types/node": "^20.5.4"
   }
 }
