--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "tiktok-signature": "^1.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "youtube-dl-exec": "^2.4.7"
