Fixed bot crashes on invalid link, added more config options
Fixed retry logic for video download

--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,5 @@
 {
-    "automaticLinkDetection": true
+    "automaticLinkDetection": true,
+    "automaticLinkDetectionErrorReply": true,
+    "allowCompressionOfLargeFiles": true
 }
