--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@discordjs/voice": "^0.16.0",
     "@types/fluent-ffmpeg": "^2.1.22",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
+    "libsodium-wrappers": "^0.7.13",
     "tiktok-signature": "^1.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
