Added config option to set custom ffmpeg path

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
+    "ffmpegPath": "",
     "automaticLinkDetection": true,
     "automaticLinkDetectionErrorReply": true,
     "allowCompressionOfLargeFiles": true
