Added better logger and other small UX improvements

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,11 @@
 {
-    "ffmpegPath": "",
-    "automaticLinkDetection": true,
-    "automaticLinkDetectionErrorReply": true,
-    "allowCompressionOfLargeFiles": true
+    "botOptions": {
+        "automaticLinkDetection": true,
+        "automaticLinkDetectionErrorReply": true,
+        "allowCompressionOfLargeFiles": true
+    },
+    "environmentOptions": {
+        "ffmpegPath": "",
+        "logToFile": false
+    }
 }
