--- a/package.json
+++ b/package.json
@@ -7,23 +7,25 @@
   "scripts": {
     "start": "ts-node --esm src/index.ts"
   },
-  "author": "",
+  "author": "PercentEquals",
   "license": "MIT",
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
-    "@types/fluent-ffmpeg": "^2.1.22",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "libsodium-wrappers": "^0.7.13",
+    "pino": "^8.16.1",
+    "pino-pretty": "^10.2.3",
     "tiktok-signature": "^1.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "youtube-dl-exec": "^2.4.7"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.23",
     "@types/node": "^20.5.4"
   }
 }
