--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "libsodium-wrappers": "^0.7.13",
     "pino": "^8.16.1",
     "pino-pretty": "^10.2.3",
+    "playwright": "^1.40.1",
+    "playwright-chromium": "^1.40.1",
     "tiktok-signature": "^1.8.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
