--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "ts-node --esm src/index.ts",
-    "linux-production": "RC=1; while [ $RC -ne 0 ]; do npm run start; RC=$?; done"
+    "start-tsx": "npx tsx src/index.ts",
+    "linux-production": "RC=1; while [ $RC -ne 0 ]; do npm run start; RC=$?; done",
+    "linux-production-tsx": "RC=1; while [ $RC -ne 0 ]; do npm run start-tsx; RC=$?; done"
   },
   "author": "PercentEquals",
   "license": "MIT",
