Improved vx fallback and made bot aware of usage of vx links

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,8 @@
     "botOptions": {
         "automaticLinkDetection": true,
         "automaticLinkDetectionErrorReply": true,
-        "allowCompressionOfLargeFiles": true
+        "allowCompressionOfLargeFiles": true,
+        "useVxFallback": true
     },
     "environmentOptions": {
         "ffmpegPath": "",
