--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ffmpeg-static": "^5.2.0",
     "file-type": "^18.7.0",
     "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg-multistream": "github:philhk/fluent-ffmpeg-multistream-windows",
     "libsodium-wrappers": "^0.7.13",
     "patch-package": "^8.0.0",
     "pino": "^8.16.1",
