Improved compression of large files

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
     "botOptions": {
         "automaticLinkDetection": true,
         "automaticLinkDetectionErrorReply": true,
-        "allowCompressionOfLargeFiles": false,
+        "allowCompressionOfLargeFiles": true,
         "useVxFallback": true
     },
     "environmentOptions": {
