--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
+    "async": "^3.2.5",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1",
@@ -30,6 +31,7 @@
     "youtube-dl-exec": "^2.5.7"
   },
   "devDependencies": {
+    "@types/async": "^3.2.24",
     "@types/fluent-ffmpeg": "^2.1.23",
     "@types/node": "^20.5.4",
     "tsx": "^4.7.1"
