Added verboseErrorReply option and added automatic x/twitter link detection

--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,8 @@
         "automaticLinkDetection": true,
         "automaticLinkDetectionErrorReply": true,
         "allowCompressionOfLargeFiles": true,
-        "useVxFallback": true
+        "useVxFallback": true,
+        "verboseErrorReply": false
     },
     "environmentOptions": {
         "ffmpegPath": "",
