--- a/config/config.json
+++ b/config/config.json
@@ -3,8 +3,9 @@
         "automaticLinkDetection": true,
         "automaticLinkDetectionErrorReply": true,
         "allowCompressionOfLargeFiles": true,
+        "allowSplittingOfLargeFiles": true,
         "useVxFallback": true,
-        "verboseErrorReply": false
+        "verboseErrorReply": true
     },
     "environmentOptions": {
         "ffmpegPath": "",
