--- a/package.json
+++ b/package.json
@@ -5,34 +5,32 @@
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "npx tsx watch src/index.ts",
-    "start": "npx tsx src/index.ts",
+    "start": "bun src/index.ts",
     "linux-production": "RC=1; while [ $RC -ne 0 ]; do npm run start; RC=$?; done"
   },
   "author": "PercentEquals",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/voice": "^0.16.0",
-    "async": "^3.2.5",
-    "cheerio": "^1.0.0-rc.12",
-    "discord.js": "^14.12.1",
-    "dotenv": "^16.3.1",
+    "@discordjs/voice": "^0.16.1",
+    "async": "^3.2.6",
+    "cheerio": "^1.0.0",
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
     "ffmpeg-static": "^5.2.0",
     "file-type": "^18.7.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "libsodium-wrappers": "^0.7.13",
+    "fluent-ffmpeg": "^2.1.3",
+    "libsodium-wrappers": "^0.7.15",
     "patch-package": "^8.0.0",
-    "pino": "^8.16.1",
-    "pino-pretty": "^10.2.3",
-    "tiktok-signature": "^1.8.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
-    "youtube-dl-exec": "^2.5.7"
+    "pino": "^8.21.0",
+    "pino-pretty": "^10.3.1",
+    "playwright": "1.49",
+    "tiktok-signature": "^1.9.2",
+    "typescript": "^5.8.2",
+    "youtube-dl-exec": "^2.5.8"
   },
   "devDependencies": {
     "@types/async": "^3.2.24",
-    "@types/fluent-ffmpeg": "^2.1.23",
-    "@types/node": "^20.5.4",
-    "tsx": "^4.7.1"
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/node": "^20.17.25"
   }
 }
