--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
   },
   "trustedDependencies": [
     "youtube-dl-exec"
-  ]
+  ],
+  "patchedDependencies": {
+    "fluent-ffmpeg@2.1.3": "patches/fluent-ffmpeg@2.1.3.patch"
+  }
 }
