--- a/package.json
+++ b/package.json
@@ -14,14 +14,13 @@
   "dependencies": {
     "@discordjs/voice": "^0.16.1",
     "async": "^3.2.6",
-    "cheerio": "^1.0.0",
     "discord.js": "^14.18.0",
     "dotenv": "^16.4.7",
     "ffmpeg-static": "^5.2.0",
     "file-type": "^18.7.0",
     "fluent-ffmpeg": "^2.1.3",
-    "happy-dom": "^17.4.4",
     "libsodium-wrappers": "^0.7.15",
+    "node-html-parser": "^7.0.1",
     "patch-package": "^8.0.0",
     "pino": "^8.21.0",
     "pino-pretty": "^10.3.1",
